fix router overlap problem

--- a/src/global.scss
+++ b/src/global.scss
@@ -40,3 +40,7 @@
 .animate-all {
   transition: all 0.5s ease;
 }
+
+.ion-page {
+  background: white;
+}
